# parsec-tool

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  MAINTAINERS.toml  README.md  SECURITY.md  ci.sh  clippy.toml
.cargo/: audit.toml
.github/actions/ci_script/: action.yml
.github/workflows/: ci.yml  nightly.yml
patches/: rcgen+0.13.1.patch  rcgen+0.9.3.patch
src/: common.rs  error.rs  lib.rs  main.rs  util.rs
src/cli/: mod.rs
src/subcommands/: common.rs  create_csr.rs  create_ecc_key.rs  create_rsa_key.rs  decrypt.rs  delete_client.rs  delete_key.rs  encrypt.rs  export_key.rs  export_public_key.rs  generate_random.rs  list_authenticators.rs  list_clients.rs  list_keys.rs  list_opcodes.rs  list_providers.rs  mod.rs  ping.rs  psa_destroy_key.rs  psa_export_key.rs  psa_export_public_key.rs  psa_generate_key.rs  psa_generate_random.rs  sign.rs  verify.rs
src/util/: mod.rs  output.rs
tests/: ci.sh  parsec-cli-tests.sh  test_config.toml
tests/expected_output/: list-authenticators  list-keys  list-providers
utils/: dependency_cross_matcher.py
