[package]
name = "parsec-tool"
version = "0.1.0"
authors = ["Contributors to the Parsec project"]
description = "Parsec Command Line Interface"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-tool"
readme = "README.md"
keywords = ["parsec", "cli", "tool"]
categories = ["development-tools", "command-line-utilities"]
edition = "2018"
documentation = "https://docs.rs/crate/parsec-tool"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.32"
atty = "0.2.14"
clap = "3.0.0-beta.1"
parsec-client = { git = "https://github.com/parallaxsecond/parsec-client-rust", rev = "3c78e3e9fe7f951a76cb4c346c4a8507d0d4a5c3" }
structopt = "0.3.17"
thiserror = "1.0.20"
env_logger = "0.8.2"

[lib]
name = "parsec_tool"
path = "src/lib.rs"

[[bin]]
name = "parsec-tool"
