[package]
name = "parsec-tool"
version = "0.3.0"
authors = ["Contributors to the Parsec project"]
description = "Parsec Command Line Interface"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-tool"
readme = "README.md"
keywords = ["parsec", "cli", "tool"]
categories = ["development-tools", "command-line-utilities"]
edition = "2018"
documentation = "https://docs.rs/crate/parsec-tool"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = "3.0.0-beta.1"
parsec-client = "0.12.0"
structopt = "0.3.17"
thiserror = "1.0.20"
env_logger = "0.8.2"
pem = "0.8.2"
base64 = "0.13.0"
picky-asn1  = "0.3.0"
picky-asn1-der = "0.2.4"
serde = "1.0.123"
sha2 = "0.9.1"
log = "0.4.14"

[lib]
name = "parsec_tool"
path = "src/lib.rs"

[[bin]]
name = "parsec-tool"
