[package]
name = "parsec-tool"
version = "0.5.4"
authors = ["Contributors to the Parsec project"]
description = "Parsec Command Line Interface"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-tool"
readme = "README.md"
keywords = ["parsec", "cli", "tool"]
categories = ["development-tools", "command-line-utilities"]
edition = "2018"
documentation = "https://docs.rs/crate/parsec-tool"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = "2.34.0"
parsec-client = "0.14.1"
structopt = "0.3.17"
thiserror = "1.0.20"
env_logger = "0.8.2"
oid = { version = "0.2", features = ["serde_support"] }
pem = "1.1.0"
base64 = "0.13.0"
picky-asn1 = "0.3.0"
picky-asn1-der = "0.2.4"
picky-asn1-x509 = "0.6.1"
serde = "1.0.123"
sha2 = "0.9.9"
log = "0.4.14"
rcgen = { version = "0.9.2", features = ["pem"] }

[lib]
name = "parsec_tool"
path = "src/lib.rs"

[[bin]]
name = "parsec-tool"

[features]
default = []
spiffe-auth = ["parsec-client/spiffe"]
